--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 
 <body>
   <header>
+    <h1>Pete Thinkful | Artist</h1>
     <nav>
       <a href="#about">About</a>
       <a href="#portfolio">Portfolio</a>
